# Portfolio

./: .env.example  .gitignore  CNAME  README.md  components.json  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
.github/workflows/: cd.yml  ci.yml
backenduwu/: main.py  pyproject.toml
src/app/: about.tsx  footer.tsx  gitProj.tsx  githubData.js  homeContent.tsx  languages.tsx  layout.tsx  mail.tsx  navbar.tsx  page.tsx  projects.tsx  trajectory.tsx
src/app/about/: about.tsx
src/app/api/contact/: route.ts
src/app/data/: githubData.js
src/app/main/: footer.tsx  globals.css  navbar.tsx  postFooter.tsx
src/app/sections/: about.tsx  homeContent.tsx  languages.tsx  mail.tsx  projects.tsx  trajectory.tsx
src/components/ui/: badge.tsx
src/lib/: rate-limit.ts  sanitize.ts
