[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["NatalyJaya <Nataliesalazar195@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.1"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
