[tool.poetry]
name = "backenduwu"
version = "0.1.0"
description = "uwu, package mode importate!!!!!!!!!!!!"
authors = ["NatalyJaya <Nataliesalazar195@gmail.com>"]
readme = "README.md"
package-mode = false 
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
